updated mapping to preserve type in mapping steps